import { it } from "vitest"

import * as model from "../src/model"
import { snapshotTwice } from "./__testutils__/snapshotTwiceMacro"

it("creates a mock Timestamp field model", ({ task }) => {
	snapshotTwice((name) => model.timestamp({ seed: name }), task.name)
})

it("supports number seed", ({ task }) => {
	snapshotTwice(() => model.timestamp({ seed: 1 }), task.name)
})
